exports[`boolean() > Parse '' 1`] = `
{
  "node": {
    "type": "boolean",
    "range": {
      "start": 0,
      "end": 0
    }
  },
  "errors": [
    {
      "range": {
        "start": 0,
        "end": 0
      },
      "message": "Expected “false” or “true”",
      "severity": 3
    }
  ]
}
`;

exports[`boolean() > Parse 'false' 1`] = `
{
  "node": {
    "type": "boolean",
    "range": {
      "start": 0,
      "end": 5
    },
    "value": false
  },
  "errors": []
}
`;

exports[`boolean() > Parse 'foo' 1`] = `
{
  "node": {
    "type": "boolean",
    "range": {
      "start": 0,
      "end": 0
    }
  },
  "errors": [
    {
      "range": {
        "start": 0,
        "end": 0
      },
      "message": "Expected “false” or “true”",
      "severity": 3
    }
  ]
}
`;

exports[`boolean() > Parse 'true' 1`] = `
{
  "node": {
    "type": "boolean",
    "range": {
      "start": 0,
      "end": 4
    },
    "value": true
  },
  "errors": []
}
`;
